# polycut

./: .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  README.md  polycut.spec  pyproject.toml  shell.nix  skills-lock.json
.claude/agents/: design-system-guard.md  privacy-guard.md
.github/workflows/: windows-build.yml
docs/: design-system.md
docs/adr/: 0001-export-sketchup-via-dae.md  0002-gpl-pymeshlab-for-textured-simplification.md  0003-faithful-cpu-simplify-decouple-render.md  0004-parts-by-texture-colour-on-simplified-mesh.md  0005-unify-viewport-camera-one-rig.md  0006-export-sketchup-native-skp-via-c-sdk.md  0007-multi-format-import-materials-as-parts-multi-texture.md  0008-auto-cluster-spatial-locality-augmented-feature.md
docs/agents/: commit-workflow.md  domain.md
polycut/: __init__.py  app.py  resources.py
polycut/bridge/: __init__.py  buffer_geometry.py  buffer_source.py  explode_geometry.py  highlight_geometry.py  mesh_geometry.py  mesh_view.py  parts_geometry.py  parts_view.py  processor.py
polycut/core/: __init__.py  brush.py  export.py  model.py  orient.py  parts.py  picking.py  scale.py  segment.py  simplify.py  transform.py  viewport.py
tests/: test_resources.py
tests/bridge/: conftest.py  test_before_after_split.py  test_buffer_geometry.py  test_import_wiring.py  test_mesh_geometry.py  test_outliner.py  test_parts_export_wiring.py  test_parts_preservation.py  test_parts_view.py  test_preserve.py  test_presets.py  test_processing_indicator.py  test_recut_lifecycle.py  test_render_mode.py  test_simplify_serialization.py  test_simplify_target.py  test_transform.py  test_viewport_qml.py  test_viewport_view_model.py
tests/core/: conftest.py  test_brush.py  test_export.py  test_export_model.py  test_gltf_export.py  test_load.py  test_model.py  test_model_simplifier.py  test_obj_export.py  test_orient.py  test_part_colours.py  test_parts.py  test_parts_export.py  test_picking.py  test_preserve.py  test_preview_export_parity.py  test_scale.py  test_screen_ray.py  test_segment.py  test_simplify.py  (+3 more)
(+21 files in other folders)
